<resources>
    <string name="app_name">Pubbs Admin</string>
    <string name="server_error">Server Error</string>
    <string name="url">http://pubbs.in/api/1.0/admincontroller.php</string>
    <string name="url_login">http://pubbs.in/api/1.0/admin_login.php</string>
    <string name="sharedPreferences">pubbsAdmin</string>
    <string name="invalid_auth">Invalid authentication</string>
    <string name="search_title">Search</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="holdtimes">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>240</item>
        <item>300</item>
        <item>360</item>
    </string-array>
    <string name="select_area">Select Area</string>
    <string name="search_suggestion">Enter Address, City or Zip Code</string>
    <string name="select_area_description">How do you select your location ?</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.\n\n
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="area">Select your area now.</string>
    <string name="bottom_sheet_tv">Need help for location ?</string>
    <string name="area_rate_chart_header">How do you add rate chart for your selected area?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_bicycle">All Bicycles</string>
    <string name="title_activity_sign_in_up">SignInUp</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="mobile_tv">Mobile</string>
    <string name="password_tv">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_btn">Log In</string>
    <string name="fullname_tv">Full Name</string>
    <string name="email_tv">Email</string>
    <string name="address">City</string>
    <string name="get_otp">Get OTP</string>
    <string name="otp_tv">Please enter your phone number here.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp">OTP</string>
    <string name="otp_message">Please enter the OTP has sent to your mobile number</string>
    <string name="edit_number">Edit Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="accident">Meet an Accident !</string>
    <string name="bicycles">Bicycles</string>
    <string name="add_bicycle">Add bicycle to a station</string>
    <string name="draw_redistribution">Draw for redistribution</string>
    <string name="scan_tv">Scan the QR code to add in reserve</string>
    <string name="proceed">Proceed</string>
    <string name="title_activity_rate_chart">Rate Chart</string>
    <string name="time_slab">Time Slab</string>
    <string name="price_tv">Price</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="display">5</string>
    <string name="rupee">₹</string>
    <string name="bottom_sheet_rate">Need help for Adding Rate Chart ?</string>
    <string name="manage_system">Manage System</string>
    <string name="all_set">All Set !</string>
    <string name="manage_ur_system">Manage your system</string>
    <string name="more_efficiently">more efficiently .</string>
    <string name="max_ride_time">Maximum ride time</string>
    <string name="max_hold_time">Maximum hold time</string>
    <string name="min_amount_wallet">Minimum Amount rider should have in wallet</string>
    <string name="min_amount">Rupees</string>
    <string name="ride_msg">Know more about ride time and hold time</string>
    <string name="repair_bicycle">Add bicycle to repair</string>
    <string name="repair_bicycle_tv">Repair Bicycle</string>
    <string name="draw_repair">Draw for Repair</string>
    <string name="search_user">Search with user name or user ID</string>
    <string name="user_list">User List</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="redistribution_tv">Redistribution</string>
    <string name="scan_qr_code">Please Scan the QR code</string>
    <string name="else_number">Else enter the number</string>
    <string name="on_bicycle">of the bicycle.</string>
    <string name="bicycle_id_tv">Enter the bicycle number below.</string>
    <string name="ride_time_msg">Know more about ride time and hold time</string>
    <string name="add_bicycle_tv">Add New Bicycle</string>
    <string name="bottom_sheet_add_bicycle">Need help for adding bicycle ?</string>
    <string name="opening_hour">Opening Hour </string>
    <string name="closing_hour">Closing Hour </string>
    <string name="geofencing_fine">Geofencing Fine</string>
    <string name="add_new_station">Add New Station</string>
    <string name="add_station">Add station to area</string>
    <string name="title_activity_add_new_station_map">Map</string>
    <string name="station_add">Select Station</string>
    <string name="add_new_bicycle_message">To add a new bicycle click "Add Now"  button. \n Scan the QR code and enter the
        Bicycle ID</string>
    <string name="add_area_tv">To add new area</string>
    <string name="add_new_area_message">\u2192 Admin can Choose area by typing the location in the search bar \n\n
    \u2192 Tweleve coordinates/points should be choosen in the map to create the polygon. \n\n
        \u2192 A name of the polygonal area should be given. \n\n
        \u2192 Admin can proceed to the next screen by clicking ok. \n\n
        \u2192 The Timeslabs should be set with the price for rate chart. \n\n
        \u2192 To proceed Ok Button should be clicked. \n\n
        \u2192 He/She should create the final area by setting \n
            (1)	Maximum Ride Time \n\n
            (2)	Maximum Cycle Holding Time\n\n
            (3)	Minimum amount of money present in online wallet\n\n
            (4)	Opening Hour\n\n
            (5)	Closing Hour And \n\n
            (6)	Geo-fencing Fine\n\n
        \u2192 Admin should hit the PROCEED Button to add the area to the Server.
    </string>
    <string name="select_station">Select your station now.</string>
    <string name="add_station_">How to add a station inside an area?</string>
    <string name="add_station_header">To add new station</string>
    <string name="add_station_help">Admin can plot a single coordinate inside the choosen polygonal area.\n A dialog will pop-up in the
    screen. Admin has to give a name of the station. \n After pressing ok button the station details will be saved in the server.</string>
    <string name="manage_system_message">To create an area of his/her choice, Admin should set the Maximum ride time, Maximum cycle hold time,
        Minimum amount of money present in the wallet, Opening hour and Closing hour of the service and Geo-Fencing fine\n
        and then hit Proceed button and Area will be added to the database.
   </string>
    <string name="rate_chart_time_message">To set the rate of Bicycle, Admin should set the Timeslabs as well as the Price.\n
    Admin has to change the custom time number picker and corrosponding price.</string>
    <string name="select_bicycle">How do you add new bicycle ?</string>
    <string name="bicycle">Add new bicycle now.</string>
    <string name="rate_chart_time">How do you set Rate chart on basis of Time ?</string>
    <string name="rate">Add Rate chart timeslabs and price now.</string>
    <string name="manage">How do you Manage your area/system ?</string>
    <string name="system">Add all the constraints for the area.</string>
    <string name="stations">Stations</string>
    <string name="delete_station">Delete station from area</string>
    <string name="delete_sta">delete the station from area !!!</string>
    <string name="manage_operator">Manage Operator</string>
    <string name="add_operator">Add Operator</string>
    <string name="edit_operator">Edit Operator</string>
    <string name="delete_operator">Delete Operator</string>
    <string name="add_op">Add Operator</string>
    <string name="operator_tv">Operators</string>
    <string name="delete_operator_tv">Delete Operator from Operator List</string>
    <string name="delete_opt">delete operator from panel !!!</string>
    <string name="subscription">Set your subscription for an area</string>
    <string name="bottom_sheet_subscription">Help for creating subscription for an area?</string>
    <string name="subscription_help">How do you set Subscription for an Area ?</string>
    <string name="subscription_message">To create subscription plan user has to add amount of money for subscription, time period of\n
    subscription and unit of time that will be added to any user s ride time after subscribing to any plan. \n
    User has to enter all four- Basic, Standard, Sweet, Premium subscription plan details and proceed further.</string>
    <string name="subscribe">Add subscription plans now.</string>
    <string name="repair_pool">Know how to add cycle in repair pool.</string>
    <string name="repair">How do you add cycle in repair pool ?</string>
    <string name="repair_msg">To add a bicycle in repair-pool, scan the QR code of the bicycle. \n
    Hit Yes to add cycle in the pool and No to discontinue.\n
        All the bicycles which are added in repair-pool will be shown in the repair list</string>
    <string name="repair_tv">Now add bicycle to repair-pool</string>
    <string name="recharge_battery">Recharge Battery</string>
    <string name="recharge_bicycle">Enter bicycle id </string>
    <string name="cycles">Cycles</string>
    <string name="cycle_tv">Enter cycle id to remove</string>
    <string name="service_area">Service Area</string>
    <string name="service_search">Search service area by name</string>
    <string name="admins">Area Admin List</string>
    <string name="search_admin">Enter Admin name to find</string>
    <string name="area_list">Area List</string>
    <string name="search_area">Enter Area name</string>
    <string name="station_list">Station List</string>
    <string name="search_station">Enter Station name</string>
    <string name="feedback_list">Feedback</string>
    <string name="feedback_search">Enter Admin mobile to search</string>
    <string name="reply">Reply Message</string>
    <string name="list_admin">List of Admins</string>
    <string name="list_area">List of Areas</string>
    <string name="subscription_tv">Subscription Plans</string>
    <string name="subadmin_list">Lists of Sub Admin</string>
</resources>