<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="40dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/decrement"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:text="@string/decrement"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/display"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/display"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="mins"/>
    <Button
        android:id="@+id/increment"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:text="@string/increment"
        android:textSize="25sp" />

</LinearLayout>
