<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="40dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/decrement"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:text="@string/decrement"
        android:background="@drawable/number_picker_button_bg"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@drawable/number_picker_bg"
        >
        <EditText
            android:id="@+id/display"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/display"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/black" />


    </LinearLayout>
    <Button
        android:id="@+id/increment"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:text="@string/increment"
        android:background="@drawable/number_picker_button_bg"
        android:textSize="25sp" />

</LinearLayout>
