<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/description_header"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/black"
                    android:paddingBottom="@dimen/eight_dp"
                    android:paddingStart="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/sixteen_dp"
                    android:text="@string/select_area_description"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fourteen_sp" />

                <TextView
                    android:id="@+id/description_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_header"
                    android:paddingBottom="@dimen/eight_dp"
                    android:paddingStart="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/eight_dp"
                    android:textAlignment="center"
                    android:text="@string/add_area_tv"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/fourteen_sp" />
                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_"
                    android:paddingBottom="@dimen/eight_dp"
                    android:paddingStart="@dimen/sixteen_dp"
                    android:paddingEnd="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/twenty_four_dp"
                    android:text="@string/add_new_area_message"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/fourteen_sp" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/white">

        <TextView
            android:id="@+id/area_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/twenty_four_dp"
            android:paddingTop="@dimen/eight_dp"
            android:text="@string/area"
            android:textAlignment="center"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/fourteen_sp" />

        <ImageView
            android:id="@+id/show_map"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/thirty_dp"
            app:srcCompat="@drawable/ic_expand_more_24dp" />

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>