<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBicycleQRActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/four_dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/toolbar_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen_dp">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/add_bicycle_tv"
                    android:layout_alignParentStart="true"
                    app:srcCompat="@drawable/ic_arrow_back_24dp" />

                <TextView
                    android:id="@+id/add_bicycle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/one_twenty_dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:padding="@dimen/four_dp"
                    android:text="@string/add_bicycle_tv"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fourteen_sp" />

                <TextView
                    android:id="@+id/scan_qr_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_bicycle_tv"
                    android:layout_marginStart="@dimen/twenty_eight_dp"
                    android:layout_marginTop="@dimen/eight_dp"
                    android:padding="@dimen/four_dp"
                    android:text="@string/scan_qr_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/eighteen_sp" />

                <TextView
                    android:id="@+id/enter_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/scan_qr_tv"
                    android:layout_marginStart="@dimen/twenty_eight_dp"
                    android:layout_marginTop="@dimen/two_dp"
                    android:padding="@dimen/four_dp"
                    android:text="@string/else_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/eighteen_sp" />

                <TextView
                    android:id="@+id/bicycle_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/enter_number_tv"
                    android:layout_marginStart="@dimen/twenty_eight_dp"
                    android:layout_marginTop="@dimen/two_dp"
                    android:padding="@dimen/four_dp"
                    android:text="@string/on_bicycle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/eighteen_sp" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/seventy_two_dp">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="280dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_frame">

            <TextView
                android:id="@+id/bicycle_number_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:layout_marginTop="@dimen/eight_dp"
                android:padding="@dimen/two_dp"
                android:text="@string/bicycle_id_tv"
                android:textColor="@color/black"
                android:textSize="@dimen/fourteen_sp" />

            <EditText
                android:id="@+id/bicycle_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:layout_marginStart="@dimen/twenty_four_dp"
                android:layout_marginTop="@dimen/thirty_two_dp"
                android:background="@drawable/edittext_bg"
                android:paddingBottom="@dimen/four_dp"
                android:paddingEnd="@dimen/four_dp"
                android:paddingStart="@dimen/eight_dp"
                android:paddingTop="@dimen/four_dp"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="@dimen/fourteen_sp" />

            <Button
                android:id="@+id/proceed_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/twenty_four_dp"
                android:layout_marginTop="@dimen/eighty_four_dp"
                android:background="@drawable/button_bg"
                android:padding="@dimen/eight_dp"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/fourteen_sp" />
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/design_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_dp"
        android:background="@color/black"
        android:paddingBottom="@dimen/eight_dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/eight_dp"
        app:behavior_hideable="false"
        app:elevation="4dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/bottomsheet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/four_dp"
            android:text="@string/ride_time_msg"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp" />

        <ImageView
            android:id="@+id/up_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/eight_dp"
            android:background="@drawable/ic_expand_less_white_24dp" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>