<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateChartTime">

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginStart="@dimen/seventy_four_dp"
        android:layout_marginTop="@dimen/one_hundred_dp"
        android:text="@string/time_slab"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.travijuu.numberpicker.library.NumberPicker
        android:id="@+id/number_picker"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/twenty_four_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_tv"
        numberpicker:custom_layout="@layout/number_picker_custom_layout"
        numberpicker:focusable="false"
        numberpicker:max="240"
        numberpicker:min="5"
        numberpicker:unit="1"
        numberpicker:value="5" />

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/one_hundred_dp"
        android:text="@string/price_tv"
        android:textColor="@color/black"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/layout_price"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/twenty_four_dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_tv">

        <TextView
            android:id="@+id/rupee_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fourty_dp"
            android:layout_marginTop="@dimen/tweleve_dp"
            android:text="@string/rupee"
            android:textColor="@color/black"
            android:textSize="@dimen/fourteen_sp" />

        <EditText
            android:id="@+id/rupees"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/two_dp"
            android:backgroundTint="@color/white"
            android:singleLine="true"
            android:text="5"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textSize="@dimen/fourteen_sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>